# pila

./: MULTI_GHOST_GUIDE.md  README.md  play.py  pyproject.toml  record_ghosts.py  train.py  train_multighost_example.py
multi_ghost/: __init__.py  dataset.py  recorder.py
