[project]
name = "pila"
version = "0.1.0"
description = "PolyTrack Imitation Learning Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "tryfonaskam", url = "https://github.com/tryfonaskam"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "tensorboard>=2.14.0",
    "dxcam>=0.1.9",
    "pynput>=1.7.6",
    "pytorch-lightning>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pila*"]
